Use valueOf() instead of object constructors for primitive boxes